tests-integration/tests/roundtrip/invalid/semantic/typecheck/allDiff/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/allDiff/01/input.essence:2:23:
  |
2 | such that b = allDiff(5)
  |                       ^
Type error:
	Expected: "Matrix or list"
	Got: int

